docs: generate project documentation